Native lib calling and working